--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css">
@@ -31,6 +32,47 @@
         </div>
       </div>
       
+      <!-- now we will see the auto layout coloumn in the bootstrap  -->
+       
+      <section class="container-fluid ">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-12 bg-light py-5">
+                    <h2>Home service</h2> 
+                </div>
+            </div>
+            <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 bg-light py-5">
+                <div class="col"> 
+                   <div class="bg-info text-center">
+                    <h3>Home loan</h3>
+                    <i class="fa-solid fa-house"></i>
+                    <p>best for you </p>
+                   </div>
+                </div>
+                <div class="col "> 
+                    <div class="bg-warning text-center">
+                        <h3>Home loan</h3>
+                        <i class="fa-solid fa-house"></i>
+                        <p>best for you </p>
+                       </div>
+                </div>
+                <div class="col"> 
+                    <div class="bg-success text-center">
+                        <h3>Home loan</h3>
+                        <i class="fa-solid fa-house"></i>
+                        <p>best for you </p>
+                       </div>
+                </div>
+                <div class="col "> 
+                    <div class="bg-danger text-center">
+                        <h3>Home loan</h3>
+                        <i class="fa-solid fa-house"></i>
+                        <p>best for you </p>
+                       </div>
+                </div>
+            </div>
+        </div>
+      </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
