--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -41,7 +41,7 @@
                     <h2>Home service</h2> 
                 </div>
             </div>
-            <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 bg-light py-5">
+            <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 bg-light py-5 gx-4 ">
                 <div class="col"> 
                    <div class="bg-info text-center">
                     <h3>Home loan</h3>
@@ -70,11 +70,39 @@
                         <p>best for you </p>
                        </div>
                 </div>
+                <div class="col"> 
+                    <div class="bg-info text-center">
+                     <h3>Home loan</h3>
+                     <i class="fa-solid fa-house"></i>
+                     <p>best for you </p>
+                    </div>
+                 </div>
+                 <div class="col "> 
+                     <div class="bg-warning text-center">
+                         <h3>Home loan</h3>
+                         <i class="fa-solid fa-house"></i>
+                         <p>best for you </p>
+                        </div>
+                 </div>
+                 <div class="col"> 
+                     <div class="bg-success text-center">
+                         <h3>Home loan</h3>
+                         <i class="fa-solid fa-house"></i>
+                         <p>best for you </p>
+                        </div>
+                 </div>
+                 <div class="col "> 
+                     <div class="bg-danger text-center">
+                         <h3>Home loan</h3>
+                         <i class="fa-solid fa-house"></i>
+                         <p>best for you </p>
+                        </div>
+                 </div>
             </div>
         </div>
       </section>
 
-
+<!-- now here we will see that how we will use the gutter classe  in the boot use for the see that how we will fix the padding and margin in the div -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"></script>
 </body>
