spacing work of margin and padding

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -41,7 +41,7 @@
                     <h2>Home service</h2> 
                 </div>
             </div>
-            <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 bg-light py-5 gx-4 ">
+            <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 bg-light py-5 gx-4 mt-lg-4 mt-sm-3 mt-xxl-5">
                 <div class="col"> 
                    <div class="bg-info text-center">
                     <h3>Home loan</h3>
@@ -102,7 +102,9 @@
         </div>
       </section>
 
-<!-- now here we will see that how we will use the gutter classe  in the boot use for the see that how we will fix the padding and margin in the div -->
+<!-- now here we will see that how we will use the gutter classe  in the boot use for the see that how we will fix the padding and margin in the div  by the code using gx and gy-->
+
+<!-- now we will see that how our spcing work  -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"></script>
 </body>
