--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -34,6 +34,42 @@
       
       <!-- now we will see the auto layout coloumn in the bootstrap  -->
        
+
+
+      <!--  now here we will see that how we can set the image in the page with the proper help of the bootstrap  -->
+
+
+        <section class="container-fluid py-5 bg-light">
+            <div class="container">
+
+            <div class="row justify-content-center">
+                <div class="col-8  ">
+                    <div class=" bg-secondary text-center " >
+
+                        <h2> Best Detail for you </h2>
+                    </div>
+                </div>
+            </div>
+
+                <div class="row bg-Secondary align-items-center">
+                    <div class=" col-sm-6 ">
+                        <div class=" col-sm-6 py-5">
+                        <img src="https://imgs.search.brave.com/ucsT33psqlx0U1GkRYDOf6sKr936SSX-XLi2ks17tv8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvNDc5/NzY3MzMyL3Bob3Rv/L2lkeWxsaWMtaG9t/ZS13aXRoLWNvdmVy/ZWQtcG9yY2guanBn/P3M9NjEyeDYxMiZ3/PTAmaz0yMCZjPW5v/RmU4Yk5Jc25Bb0dO/SlhNZXBTVlZyTkdo/RWlvcjJZMHdaY1JP/Qjk0VXc9" class="img-fluid " >
+                    </div>
+                </div>
+                <div class=" col-sm-6 py-5 ">
+                <h2> Take Loan from Us</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas voluptate soluta doloremque aut explicabo voluptatibus. Laborum aut non quidem, atque fugiat architecto voluptates quisquam cupiditate ipsam? Asperiores consequatur placeat nostrum quisquam eum repellendus, minima omnis perspiciatis, nulla saepe rerum harum aut voluptates quae quaerat vero voluptate earum architecto facere provident. Impedit illum cupiditate, mollitia itaque ratione voluptates quaerat expedita sequi molestias eveniet tenetur accusantium officiis corrupti debitis.
+
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas voluptate soluta doloremque aut explicabo voluptatibus. Laborum aut non quidem, atque fugiat architecto voluptates quisquam cupiditate ipsam? Asperiores consequatur placeat nostrum quisquam eum repellendus, minima omnis perspiciatis, nulla saepe rerum harum aut voluptates quae quaerat vero voluptate earum architecto facere provident. Impedit illum cupiditate, mollitia itaque ratione voluptates quaerat expedita sequi molestias eveniet tenetur accusantium officiis corrupti debitis.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+
       <section class="container-fluid ">
         <div class="container">
             <div class="row py-5">
