background and image

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -36,7 +36,7 @@
        
 
 
-      <!--  now here we will see that how we can set the image in the page with the proper help of the bootstrap  -->
+      <!--  now here we will see that how we can set the image in the page with the proper help of the bootstrap or we can say typography alighnment  -->
 
 
         <section class="container-fluid py-5 bg-light">
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </section>
-
+<!-- now we will learn about the some height property of the boot  -->
 
 
       <section class="container-fluid ">
